--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "react": "18.2.0",
+    "react-hook-form": "^7.52.2",
     "react-native": "0.74.5"
   },
   "devDependencies": {
