--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "react": "18.2.0",
     "react-hook-form": "^7.52.2",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
